--- a/app/css/main.css
+++ b/app/css/main.css
@@ -432,44 +432,438 @@ button {
 .form-mnemonic-copy input {
   text-align: center; }
 
+.profile {
+  padding: 69px 0 177px;
+  background: url("../img/pattern2.png") no-repeat right center;
+    background-size: contain; }
+  .profile h1 {
+    font-size: 36px;
+    margin: 0 auto 25px; }
+  .profile .container {
+    max-width: 1200px; }
+
+.profile-wrapper {
+  max-width: 1070px;
+  width: 100%;
+  margin: 0 auto; }
+
+.logo {
+  max-width: 123px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.profile-top {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 auto 130px; }
+
+.btn-burger {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+  background: -webkit-gradient(linear, left top, left bottom, from(#0EB879), to(#0FDF90));
+  background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%);
+  width: 79px;
+  height: 79px;
+  min-width: 79px;
+  -webkit-box-shadow: 0px 4px 30px rgba(15, 223, 144, 0.4);
+          box-shadow: 0px 4px 30px rgba(15, 223, 144, 0.4);
+  padding: 12px;
+  cursor: pointer;
+  -webkit-transition: .3s ease;
+  transition: .3s ease; }
+  .btn-burger:hover {
+    background: -webkit-gradient(linear, left top, left bottom, from(#0FDF90), to(#0EB879));
+    background: linear-gradient(180deg, #0FDF90 0%, #0EB879 100%); }
+
+.profile-information {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.profile-information__box {
+  max-width: 283px;
+  width: 100%;
+  font-family: 'Lato', sans-serif;
+  margin: 0 0 75px; }
+  .profile-information__box p {
+    font-size: 18px; }
+
+.profile-information__box-val {
+  font-size: 24px;
+  margin: 15px 0 25px; }
+  .profile-information__box-val strong {
+    font-weight: 900; }
+  .profile-information__box-val span {
+    display: block;
+    margin: 10px 0 0;
+    font-size: 18px;
+    font-weight: 900; }
+
+.profile-information__box-window {
+  width: 100%;
+  height: 264px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+  background: #19202A;
+  border-radius: 3px; }
+
+.profile-information__box-last .profile-information__box-window {
+  height: 235px; }
+
+.profile-information__box-window-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.5);
+  padding: 0 33px;
+  width: 100%; }
+  .profile-information__box-window-item .icon {
+    max-width: 33px;
+    width: 100%;
+    margin: 0 auto 25px; }
+
+.slider-line {
+  width: 100%;
+  border-radius: 100px;
+  height: 5px;
+  position: relative;
+  margin: 32px 0 0; }
+  .slider-line:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .2;
+    background: -webkit-gradient(linear, left top, left bottom, from(#0EB879), to(#0FDF90));
+    background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%);
+    border-radius: 100px; }
+
+.slider-line-bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(#0EB879), to(#0FDF90));
+  background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%);
+  width: 59px;
+  border-radius: 100px;
+  opacity: 1;
+  z-index: 1; }
+
+.tabs__caption-profile {
+  width: 100%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  font-size: 20px;
+  font-weight: normal;
+  max-width: none;
+  margin: 0; }
+  .tabs__caption-profile:before {
+    height: 5px;
+    border-radius: 0;
+    opacity: .1; }
+  .tabs__caption-profile li {
+    background: #19202A;
+    border-radius: 3px;
+    opacity: .3;
+    padding: 30px 138px;
+    color: #fff; }
+    .tabs__caption-profile li:before {
+      height: 5px;
+      border-radius: 0; }
+  .tabs__caption-profile .active {
+    opacity: 1; }
+
+.form-profile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  .form-profile input {
+    height: 76px; }
+  .form-profile label {
+    margin: 0 0 30px;
+    max-width: 376px; }
+  .form-profile .btn {
+    margin: 35px auto 0 0;
+    height: 76px;
+    font-size: 24px;
+    max-width: 376px; }
+
+.tabs__content-profile {
+  padding: 38px 100px 44px;
+  background: #19202A;
+  border-radius: 3px; }
+
+.total-sum {
+  width: 100%;
+  font-size: 24px; }
+  .total-sum strong {
+    font-weight: bold; }
+
+.form-row {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.description-generation-profile {
+  text-align: center;
+  width: 100%; }
+  .description-generation-profile p {
+    font-size: 24px;
+    margin: 0 auto 21px; }
+  .description-generation-profile strong {
+    font-size: 28px;
+    font-weight: 600; }
+  .description-generation-profile .btn {
+    height: 76px;
+    margin: 42px auto 0;
+    font-size: 24px;
+    max-width: 376px; }
+
+.menu-mobile {
+  position: fixed;
+  display: none;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  max-width: 584px;
+  width: 100%;
+  background: #19202A url("../img/pattern3.png") right center no-repeat;
+    background-size: contain;
+  height: 100%;
+  overflow-y: auto;
+  padding: 42px 55px 70px; }
+  .menu-mobile .logo {
+    max-width: 102px;
+    width: 100%; }
+
+.btn-close {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: -webkit-gradient(linear, left top, left bottom, from(#0EB879), to(#0FDF90));
+  background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%);
+  width: 52px;
+  height: 52px;
+  -webkit-box-shadow: 0 4px 30px rgba(15, 223, 144, 0.4);
+          box-shadow: 0 4px 30px rgba(15, 223, 144, 0.4);
+  padding: 12px;
+  cursor: pointer;
+  border-radius: 50%; }
+
+.menu-mobile__top {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 0 70px; }
+
+.menu {
+  width: 100%;
+  margin: 0 0 54px; }
+  .menu li {
+    margin: 0 0 20px; }
+    .menu li:last-child {
+      margin: 0; }
+    .menu li a {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      color: #fff;
+      font-size: 27px;
+      font-weight: 600; }
+      .menu li a:hover .menu-icon {
+        background: -webkit-gradient(linear, left top, left bottom, from(#0EB879), to(#0FDF90));
+        background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%); }
+    .menu li .active .menu-icon {
+      background: -webkit-gradient(linear, left top, left bottom, from(#0EB879), to(#0FDF90));
+      background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%); }
+
+.menu-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 22px 0 0;
+  width: 113px;
+  height: 109px;
+  min-width: 113px;
+  background: #202732;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  border-radius: 3px; }
+
+.links-edit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 22px;
+  font-family: 'Lato', sans-serif;
+  color: rgba(255, 255, 255, 0.5); }
+
+.links-edit-text {
+  margin: 0 17px 0 0; }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
-  /**/ }
+  .main-image {
+    max-width: 400px; }
+  .main-content {
+    width: calc(100% - 400px);
+    padding: 0 50px 0 0; } }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
-  /**/ }
+  .main-image {
+    max-width: 250px; }
+  .main-content {
+    width: calc(100% - 250px);
+    padding: 0 20px 0 0; }
+  .home {
+    padding: 50px 0 60px; }
+  .main-wrapper {
+    margin: 40px 0 0; }
+  .tabs__caption {
+    font-size: 18px; } }
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px) {
   /**/ }
 
 /* Extra Small Devices, Phones */
+@media only screen and (max-width: 670px) {
+  h1 {
+    font-size: 30px; }
+  .subtitle-text {
+    font-size: 18px; }
+  .main-content {
+    padding: 0;
+    width: 100%;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin: 30px auto 0; }
+  .main-image {
+    margin: 0 auto; }
+  .btn {
+    font-size: 18px; }
+  .form-description, .input-title {
+    font-size: 16px; }
+  .description-generation h3 {
+    font-size: 18px; }
+  .description-generation p {
+    font-size: 16px; } }
+
 @media only screen and (max-width: 480px) {
   /**/ }
 
 /* Custom, iPhone Retina */
-@media only screen and (max-width: 320px) {
-  /**/ }
-
-/*==========  Mobile First  ==========*/
-/* Custom, iPhone Retina */
-@media only screen and (min-width: 320px) {
-  /**/ }
-
-/* Extra Small Devices, Phones */
-@media only screen and (min-width: 480px) {
-  /**/ }
-
-/* Small Devices, Tablets */
-@media only screen and (min-width: 768px) {
-  /**/ }
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width: 992px) {
-  /**/ }
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width: 1200px) {
-  /**/ }
+@media only screen and (max-width: 420px) {
+  .tabs__caption {
+    font-size: 16px;
+    margin: 0 0 20px; }
+    .tabs__caption:before {
+      height: 5px; }
+    .tabs__caption li {
+      padding: 0 0 20px; }
+      .tabs__caption li:before {
+        height: 5px; } }
