--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -4,12 +4,31 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
-	/**/
+  .main-image
+    max-width: 400px
+
+  .main-content
+    width: calc(100% - 400px)
+    padding: 0 50px 0 0
 
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	/**/
+  .main-image
+    max-width: 250px
+
+  .main-content
+    width: calc(100% - 250px)
+    padding: 0 20px 0 0
+
+  .home
+    padding: 50px 0 60px
+
+  .main-wrapper
+    margin: 40px 0 0
+
+  .tabs__caption
+    font-size: 18px
 
 
 /* Small Devices, Tablets */
@@ -18,38 +37,46 @@
 
 
 /* Extra Small Devices, Phones */
+@media only screen and (max-width : 670px)
+  h1
+    font-size: 30px
+
+  .subtitle-text
+    font-size: 18px
+
+  .main-content
+    padding: 0
+    width: 100%
+    order: 1
+    margin: 30px auto 0
+
+  .main-image
+    margin: 0 auto
+
+  .btn
+    font-size: 18px
+
+  .form-description, .input-title
+    font-size: 16px
+
+  .description-generation
+    h3
+      font-size: 18px
+    p
+      font-size: 16px
+
 @media only screen and (max-width : 480px)
 	/**/
 
 
 /* Custom, iPhone Retina */
-@media only screen and (max-width : 320px)
-	/**/
-
-
-/*==========  Mobile First  ==========*/
-
-/* Custom, iPhone Retina */
-@media only screen and (min-width : 320px)
-	/**/
-
-
-/* Extra Small Devices, Phones */
-@media only screen and (min-width : 480px)
-	/**/
-
-
-/* Small Devices, Tablets */
-@media only screen and (min-width : 768px)
-	/**/
-
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px)
-	/**/
-
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px)
-	/**/
-
+@media only screen and (max-width : 420px)
+  .tabs__caption
+    font-size: 16px
+    margin: 0 0 20px
+    &:before
+      height: 5px
+    li
+      padding: 0 0 20px
+      &:before
+        height: 5px
