--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -379,6 +379,290 @@ button
   input
     text-align: center
 
+//.profile
+.profile
+  padding: 69px 0 177px
+  background: url("../img/pattern2.png") no-repeat right center
+    size: contain
+  h1
+    font-size: 36px
+    margin: 0 auto 25px
+  .container
+    max-width: 1200px
+
+.profile-wrapper
+  max-width: 1070px
+  width: 100%
+  margin: 0 auto
+
+.logo
+  max-width: 123px
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+
+.profile-top
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: space-between
+  flex-wrap: wrap
+  margin: 0 auto 130px
+
+.btn-burger
+  display: flex
+  align-items: center
+  justify-content: center
+  border-radius: 50%
+  background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%)
+  width: 79px
+  height: 79px
+  min-width: 79px
+  box-shadow: 0px 4px 30px rgba(15, 223, 144, 0.4)
+  padding: 12px
+  cursor: pointer
+  transition: .3s ease
+  &:hover
+    background: linear-gradient(180deg, #0FDF90 0%, #0EB879 100%)
+
+.profile-information
+  width: 100%
+  display: flex
+  align-items: flex-start
+  justify-content: space-between
+  flex-wrap: wrap
+
+.profile-information__box
+  max-width: 283px
+  width: 100%
+  font-family: 'Lato', sans-serif
+  margin: 0 0 75px
+  p
+
+    font-size: 18px
+
+.profile-information__box-val
+  font-size: 24px
+  margin: 15px 0 25px
+  strong
+    font-weight: 900
+  span
+    display: block
+    margin: 10px 0 0
+    font-size: 18px
+    font-weight: 900
+
+.profile-information__box-window
+  width: 100%
+  height: 264px
+  display: flex
+  align-items: center
+  justify-content: center
+  overflow: hidden
+  background: #19202A
+  border-radius: 3px
+
+.profile-information__box-last
+  .profile-information__box-window
+    height: 235px
+
+.profile-information__box-window-item
+  display: flex
+  flex-direction: column
+  align-items: center
+  text-align: center
+  font-size: 20px
+  font-weight: 600
+  color: rgba(#fff, .5)
+  padding: 0 33px
+  width: 100%
+  .icon
+    max-width: 33px
+    width: 100%
+    margin: 0 auto 25px
+
+.slider-line
+  width: 100%
+  border-radius: 100px
+  height: 5px
+  position: relative
+  margin: 32px 0 0
+  &:before
+    content: ''
+    position: absolute
+    left: 0
+    bottom: 0
+    width: 100%
+    height: 100%
+    opacity: .2
+    background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%)
+    border-radius: 100px
+
+.slider-line-bg
+  position: absolute
+  left: 0
+  top: 0
+  height: 100%
+  background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%)
+  width: 59px
+  border-radius: 100px
+  opacity: 1
+  z-index: 1
+
+.tabs__caption-profile
+  width: 100%
+  justify-content: flex-start
+  font-size: 20px
+  font-weight: normal
+  max-width: none
+  margin: 0
+  &:before
+    height: 5px
+    border-radius: 0
+    opacity: .1
+  li
+    background: #19202A
+    border-radius: 3px
+    opacity: .3
+    padding: 30px 138px
+    color: #fff
+    &:before
+      height: 5px
+      border-radius: 0
+
+  .active
+    opacity: 1
+
+.form-profile
+  display: flex
+  align-items: flex-start
+  flex-wrap: wrap
+  justify-content: space-between
+  input
+    height: 76px
+  label
+    margin: 0 0 30px
+    max-width: 376px
+  .btn
+    margin: 35px auto 0 0
+    height: 76px
+    font-size: 24px
+    max-width: 376px
+
+.tabs__content-profile
+  padding: 38px 100px 44px
+  background: #19202A
+  border-radius: 3px
+
+.total-sum
+  width: 100%
+  font-size: 24px
+  strong
+    font-weight: bold
+
+.form-row
+  width: 100%
+  display: flex
+  align-items: flex-start
+  flex-wrap: wrap
+  justify-content: space-between
+
+.description-generation-profile
+  text-align: center
+  width: 100%
+  p
+    font-size: 24px
+    margin: 0 auto 21px
+  strong
+    font-size: 28px
+    font-weight: 600
+  .btn
+    height: 76px
+    margin: 42px auto 0
+    font-size: 24px
+    max-width: 376px
+
+.menu-mobile
+  position: fixed
+  display: none
+  left: 0
+  top: 0
+  z-index: 10
+  max-width: 584px
+  width: 100%
+  background: #19202A url("../img/pattern3.png") right center no-repeat
+    size: contain
+  height: 100%
+  overflow-y: auto
+  padding: 42px 55px 70px
+  .logo
+    max-width: 102px
+    width: 100%
+
+.btn-close
+  display: flex
+  align-items: center
+  justify-content: center
+  background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%)
+  width: 52px
+  height: 52px
+  box-shadow: 0 4px 30px rgba(15, 223, 144, 0.4)
+  padding: 12px
+  cursor: pointer
+  border-radius: 50%
+
+
+.menu-mobile__top
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: space-between
+  flex-wrap: wrap
+  margin: 0 0 70px
+
+.menu
+  width: 100%
+  margin: 0 0 54px
+  li
+    margin: 0 0 20px
+    &:last-child
+      margin: 0
+    a
+      display: flex
+      align-items: center
+      color: #fff
+      font-size: 27px
+      font-weight: 600
+      &:hover
+        .menu-icon
+          background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%)
+    .active
+      .menu-icon
+        background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%)
+
+.menu-icon
+  display: flex
+  align-items: center
+  justify-content: center
+  margin: 0 22px 0 0
+  width: 113px
+  height: 109px
+  min-width: 113px
+  background: #202732
+  transition: .3s ease
+  border-radius: 3px
+
+.links-edit
+  display: flex
+  align-items: center
+  font-size: 22px
+  font-family: 'Lato', sans-serif
+  color: rgba(#fff, .5)
+
+.links-edit-text
+  margin: 0 17px 0 0
+
 
 @import "media"
 // Всегда в конце
