--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -30,6 +30,44 @@
   .tabs__caption
     font-size: 18px
 
+  .tabs__content-profile
+    padding: 30px
+
+  .description-generation-profile p
+    font-size: 18px
+
+  .description-generation-profile strong
+    font-size: 20px
+
+  .description-generation-profile .btn
+    height: 60px
+    max-width: 280px
+    font-size: 18px
+
+  .tabs__caption-profile li
+    padding: 20px 60px
+
+  .profile-top
+    margin: 0 0 70px
+
+  .profile h1
+    font-size: 30px
+
+  .profile
+    padding: 70px 0
+
+  .profile-information__box-val
+    font-size: 18px
+
+  .profile-information__box p, .profile-information__box-val span
+    font-size: 16px
+
+  .profile-information__box
+    margin: 0 0 50px
+
+  .profile-information
+    justify-content: space-around
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
@@ -65,8 +103,46 @@
     p
       font-size: 16px
 
+  .profile-information__box
+    width: 100%
+    max-width: none
+
+  .logo
+    max-width: 80px
+
+  .btn-burger
+    width: 60px
+    height: 60px
+    min-width: 60px
+
+  .form-profile input
+    height: 50px
+
+  .menu-mobile
+    padding: 20px
+
+  .menu li a
+    font-size: 18px
+
+  .menu-icon
+    width: 60px
+    height: 60px
+    min-width: 60px
+    padding: 10px
+
+  .links-edit
+    font-size: 18px
+
 @media only screen and (max-width : 480px)
-	/**/
+  .description-generation-profile strong
+    font-size: 14px
+
+  .profile h1
+    font-size: 26px
+
+  .subtitle-text
+    font-size: 14px
+
 
 
 /* Custom, iPhone Retina */
@@ -80,3 +156,6 @@
       padding: 0 0 20px
       &:before
         height: 5px
+
+  .tabs__caption-profile li
+    padding: 15px 20px
