--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -143,7 +143,15 @@
   .subtitle-text
     font-size: 14px
 
+  .modal__div .modal__wrapper
+    padding: 30px
 
+
+  .text-modal
+    font-size: 18px
+
+  .modal-img
+    margin: 0 auto 20px
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 420px)
