--- a/app/css/main.css
+++ b/app/css/main.css
@@ -158,9 +158,9 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-box-pack: justify;
@@ -288,7 +288,8 @@ button {
   font-size: 18px;
   width: 100%;
   margin: 0 0 10px;
-  display: block; }
+  display: block;
+  text-align: left; }
 
 .btn {
   display: -webkit-box;
@@ -840,7 +841,15 @@ button {
     text-align: center;
     background: #141A21 url("../img/pattern4.png") no-repeat right bottom;
       background-size: contain;
-    border-radius: 3px; }
+    border-radius: 3px;
+    text-align: left; }
+
+.modal__div-max {
+  max-width: 1070px; }
+  .modal__div-max .modal__wrapper {
+    padding: 127px 0 53px; }
+  .modal__div-max .total-sum {
+    text-align: left; }
 
 .text-modal {
   font-size: 24px;
@@ -876,6 +885,81 @@ button {
   max-width: 178px;
   width: 100%; }
 
+.transactions .profile-top {
+  margin: 0 0 84px; }
+  .transactions .profile-top .container {
+    max-width: 1200px; }
+
+.btn-add {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 500;
+  margin: 0 0 47px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content; }
+  .btn-add:hover {
+    color: #0FDF90; }
+
+.btn-add-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 3.69231px;
+  margin: 0 33px 0 0;
+  -webkit-box-shadow: 0px 4px 30px rgba(15, 223, 144, 0.4);
+          box-shadow: 0px 4px 30px rgba(15, 223, 144, 0.4);
+  background: -webkit-gradient(linear, left top, left bottom, from(#0EB879), to(#0FDF90));
+  background: linear-gradient(180deg, #0EB879 0%, #0FDF90 100%);
+  width: 60px;
+  height: 60px;
+  min-width: 60px; }
+
+.tabs__caption-transactions {
+  max-width: none;
+  font-size: 20px;
+  font-family: 'Lato', sans-serif;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  font-weight: normal;
+  margin: 0; }
+  .tabs__caption-transactions:before {
+    display: none; }
+  .tabs__caption-transactions li {
+    padding: 36px 66px;
+    border-radius: 3px;
+    margin: 0 20px 0 0;
+    background: rgba(41, 50, 181, 0.2);
+    color: rgba(255, 255, 255, 0.3); }
+    .tabs__caption-transactions li:before {
+      display: none; }
+    .tabs__caption-transactions li:last-child {
+      margin: 0; }
+  .tabs__caption-transactions .active {
+    color: #fff;
+    background: #2932B5;
+    font-weight: 800; }
+
+.tabs__content-transactions {
+  padding: 68px 0 0;
+  width: 100%; }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
@@ -886,6 +970,13 @@ button {
     padding: 0 50px 0 0; } }
 
 /* Medium Devices, Desktops */
+@media only screen and (max-width: 1100px) {
+  .tabs__caption-transactions li {
+    padding: 20px 30px;
+    font-size: 18px; }
+  .btn-add {
+    font-size: 16px; } }
+
 @media only screen and (max-width: 992px) {
   .main-image {
     max-width: 250px; }
@@ -928,7 +1019,18 @@ button {
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px) {
-  /**/ }
+  .tabs__caption-transactions li {
+    margin: 0 15px 10px 0; }
+    .tabs__caption-transactions li:last-child {
+      margin: 0 0 10px 0; }
+  .btn-add-icon {
+    width: 50px;
+    height: 50px;
+    min-width: 50px;
+    padding: 7px;
+    margin: 0 10px 0 0; }
+  .tabs__content-transactions {
+    padding: 40px 0 0; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px) {
@@ -974,7 +1076,9 @@ button {
     min-width: 60px;
     padding: 10px; }
   .links-edit {
-    font-size: 18px; } }
+    font-size: 18px; }
+  .form-profile label {
+    max-width: none; } }
 
 @media only screen and (max-width: 480px) {
   .description-generation-profile strong {
@@ -988,7 +1092,12 @@ button {
   .text-modal {
     font-size: 18px; }
   .modal-img {
-    margin: 0 auto 20px; } }
+    margin: 0 auto 20px; }
+  .total-sum {
+    font-size: 16px; }
+  .form-profile .btn, .description-generation-profile .btn {
+    font-size: 16px;
+    height: 50px; } }
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 420px) {
@@ -1001,5 +1110,9 @@ button {
       padding: 0 0 20px; }
       .tabs__caption li:before {
         height: 5px; }
+  .tabs__caption-transactions li {
+    padding: 20px 30px;
+    width: 100%;
+    margin: 0 0 10px; }
   .tabs__caption-profile li {
     padding: 15px 20px; } }
