--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -13,6 +13,14 @@
 
 
 /* Medium Devices, Desktops */
+@media only screen and (max-width : 1100px)
+  .tabs__caption-transactions li
+    padding: 20px 30px
+    font-size: 18px
+
+  .btn-add
+    font-size: 16px
+
 @media only screen and (max-width : 992px)
   .main-image
     max-width: 250px
@@ -71,7 +79,20 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	/**/
+  .tabs__caption-transactions li
+    margin: 0 15px 10px 0
+    &:last-child
+      margin: 0 0 10px 0
+
+  .btn-add-icon
+    width: 50px
+    height: 50px
+    min-width: 50px
+    padding: 7px
+    margin: 0 10px 0 0
+
+  .tabs__content-transactions
+    padding: 40px 0 0
 
 
 /* Extra Small Devices, Phones */
@@ -133,6 +154,9 @@
   .links-edit
     font-size: 18px
 
+  .form-profile label
+    max-width: none
+
 @media only screen and (max-width : 480px)
   .description-generation-profile strong
     font-size: 14px
@@ -153,6 +177,14 @@
   .modal-img
     margin: 0 auto 20px
 
+  .total-sum
+    font-size: 16px
+
+  .form-profile .btn, .description-generation-profile .btn
+    font-size: 16px
+    height: 50px
+
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 420px)
   .tabs__caption
@@ -164,6 +196,11 @@
       padding: 0 0 20px
       &:before
         height: 5px
+
+  .tabs__caption-transactions li
+    padding: 20px 30px
+    width: 100%
+    margin: 0 0 10px
 
   .tabs__caption-profile li
     padding: 15px 20px
