--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -21,6 +21,30 @@
   .btn-add
     font-size: 16px
 
+  table thead
+    font-size: 18px
+
+  table th
+    padding: 20px 15px
+    &:last-child
+      padding: 20px 15px
+
+  table td
+    padding: 15px
+
+  table tbody
+    font-size: 16px
+
+  .status-transaction
+    font-size: 16px
+    .icon-arrow
+      width: 20px
+      height: 20px
+      min-width: 20px
+
+  table .icon-arrow
+    margin: 0 0 0 10px
+
 @media only screen and (max-width : 992px)
   .main-image
     max-width: 250px
@@ -156,6 +180,9 @@
 
   .form-profile label
     max-width: none
+
+  .btn-add
+    margin: 0 0 20px
 
 @media only screen and (max-width : 480px)
   .description-generation-profile strong
