--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -692,16 +692,16 @@ button
     padding: 125px 90px 135px
     box-sizing: border-box
     position: relative
-    text-align: center
     background: #141A21 url("../img/pattern4.png") no-repeat right bottom
       size: contain
     border-radius: 3px
-    text-align: left
 
 .modal__div-max
   max-width: 1070px
   .modal__wrapper
     padding: 127px 0 53px
+    background: #141A21 url("../img/pattern5.png") no-repeat right bottom
+      size: contain
   .total-sum
     text-align: left
 
@@ -793,6 +793,53 @@ button
 .tabs__content-transactions
   padding: 68px 0 0
   width: 100%
+
+.table-responsive
+  width: 100%
+  overflow-x: auto
+
+table
+  background: #19202A
+  width: 100%
+  border-radius: 3px
+  overflow: hidden
+  font-family: 'Lato', sans-serif
+  thead
+    font-weight: bold
+    font-size: 24px
+    text-align: left
+  th
+    padding: 35px 20px 35px 50px
+    &:last-child
+      padding-right: 50px
+  tr
+    border-bottom: 1px solid rgba(#fff, .15)
+
+  .icon-arrow
+    display: inline
+    margin: 0 0 0 25px
+
+  tbody
+    font-size: 20px
+    font-weight: 500
+    tr
+      &:last-child
+        border: none
+  td
+    padding: 15px 50px
+
+.status-transaction
+  display: flex
+  align-items: center
+  font-size: 18px
+  font-weight: 500
+  p
+    max-width: 100px
+  .icon-arrow
+    width: 31px
+    height: 28px
+    min-width: 31px
+
 
 @import "media"
 // Всегда в конце
