--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -100,6 +100,10 @@
   .profile-information
     justify-content: space-around
 
+  .about-box
+    padding: 30px 40px
+    font-size: 16px
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
@@ -118,6 +122,20 @@
   .tabs__content-transactions
     padding: 40px 0 0
 
+  .how-to-get__box
+    width: 48%
+    margin: 0 0 40px
+    font-size: 16px
+    h3
+      font-size: 18px
+      margin: 0 auto 20px
+
+  .how-to-get
+    justify-content: space-around
+
+  h2
+    font-size: 28px
+    margin: 0 auto 30px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 670px)
@@ -183,6 +201,14 @@
 
   .btn-add
     margin: 0 0 20px
+
+@media only screen and (max-width : 575px)
+  .how-to-get__box
+    width: 100%
+
+  .about-box
+    margin: 0 0 60px
+
 
 @media only screen and (max-width : 480px)
   .description-generation-profile strong
