--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -382,7 +382,7 @@ button
 
 //.profile
 .profile
-  padding: 69px 0 177px
+  padding: 70px 0 177px
   background: url("../img/pattern2.png") no-repeat right center
     size: contain
   h1
@@ -839,6 +839,78 @@ table
     width: 31px
     height: 28px
     min-width: 31px
+
+//about
+.about
+  .container
+    max-width: 1200px
+  .profile-top
+    margin: 0 0 73px
+
+.about-box
+  padding: 43px 99px 75px
+  margin: 0 0 130px
+  width: 100%
+  background: #19202A url("../img/pattern6.png") no-repeat right bottom
+    size: contain
+  border-radius: 3px
+  font-size: 24px
+  font-family: 'Lato', sans-serif
+  line-height: 121.9%
+  p
+    margin: 0 0 15px
+    &:last-child
+      margin: 0
+
+.how-to-get__wrapper
+  .btn
+    margin: 0 auto
+    max-width: 346px
+    text-decoration: underline
+
+h2
+  text-align: center
+  width: 100%
+  font-weight: bold
+  font-size: 36px
+  margin: 0 auto 70px
+
+.how-to-get
+  display: flex
+  align-items: stretch
+  flex-wrap: wrap
+  justify-content: space-between
+
+.how-to-get__box
+  width: 32%
+  display: flex
+  flex-direction: column
+  align-items: center
+  text-align: center
+  background: #19202A
+  border-radius: 3px
+  margin: 0 0 85px
+  padding: 30px 20px 35px
+  font-family: 'Lato', sans-serif
+  font-size: 18px
+  h3
+    font-size: 24px
+    font-weight: 900
+    text-align: center
+    width: 100%
+    margin: 0 auto 25px
+
+.how-to-get__icon
+  display: flex
+  align-items: center
+  justify-content: center
+  border-radius: 50%
+  width: 100px
+  height: 100px
+  box-shadow: 0px 4px 30px rgba(41, 50, 181, 0.4)
+  background: #2932B5
+  padding: 13px
+  margin: 0 auto 40px
 
 
 @import "media"
