--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -13,6 +13,15 @@
 
 
 /* Medium Devices, Desktops */
+@media only screen and (max-width : 1150px)
+  .prosmining-box
+    width: 100%
+
+  .list-conditions
+    justify-content: space-around
+    li
+      width: 33%
+
 @media only screen and (max-width : 1100px)
   .tabs__caption-transactions li
     padding: 20px 30px
@@ -106,6 +115,37 @@
 
 
 /* Small Devices, Tablets */
+@media only screen and (max-width : 920px)
+  .prosmining-rate-box
+    width: 49%
+    margin: 0 0 30px
+    font-size: 16px
+    padding: 30px 25px
+
+  .prosmining-rates
+    margin: 0 0 40px
+
+  .prosmining-box
+    h3
+      font-size: 20px
+    .box-text
+      font-size: 16px
+
+  .list-conditions
+    font-size: 16px
+
+  .form-prosmining-box
+    padding: 30px
+    input
+      height: 50px
+      font-size: 16px
+    button
+      height: 50px
+      font-size: 16px
+
+  .prosmining .profile-top
+    margin: 0 0 70px
+
 @media only screen and (max-width : 768px)
   .tabs__caption-transactions li
     margin: 0 15px 10px 0
@@ -136,6 +176,22 @@
   h2
     font-size: 28px
     margin: 0 auto 30px
+
+  .list-conditions li
+    width: 50%
+
+  .transaction-reward__box
+    padding: 30px
+
+  .transaction-reward__box-title
+    font-size: 20px
+    margin: 0 0 20px
+
+  .transaction-reward__icon
+    margin: 0 20px 0 0
+    width: 40px
+    height: 40px
+    min-width: 40px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 670px)
@@ -208,6 +264,31 @@
 
   .about-box
     margin: 0 0 60px
+
+  .transaction-reward__box
+    width: 505px
+    margin: 0 0 40px
+    &:last-child
+      margin: 0
+
+  .form-prosmining-box
+    flex-direction: column
+    align-items: center
+    label
+      margin: 0 0 20px
+      max-width: none
+
+  .list-conditions li
+    width: 100%
+    p
+      max-width: none
+
+  .prosmining-rate-box
+    width: 100%
+
+  h2
+    font-size: 24px
+
 
 
 @media only screen and (max-width : 480px)
