--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -146,6 +146,31 @@
   .prosmining .profile-top
     margin: 0 0 70px
 
+  .table-validators td
+    padding: 10px 15px
+
+  .table-validators
+    tbody
+      font-size: 16px
+
+  .table-validators thead
+    font-size: 18px
+
+  .table-validators th:last-child, .table-validators th
+    padding: 10px 15px
+
+  .form-search input
+    font-size: 16px
+
+  .reward-box
+    margin: 0 0 40px
+    p
+      font-size: 18px
+      margin: 0 0 20px
+    .btn
+      height: 60px
+      font-size: 16px
+
 @media only screen and (max-width : 768px)
   .tabs__caption-transactions li
     margin: 0 15px 10px 0
