--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -808,13 +808,11 @@ table
     font-weight: bold
     font-size: 24px
     text-align: left
+    border-bottom: 1px solid rgba(#fff, .15)
   th
     padding: 35px 20px 35px 50px
     &:last-child
       padding-right: 50px
-  tr
-    border-bottom: 1px solid rgba(#fff, .15)
-
   .icon-arrow
     display: inline
     margin: 0 0 0 25px
@@ -823,6 +821,7 @@ table
     font-size: 20px
     font-weight: 500
     tr
+      border-bottom: 1px solid rgba(#fff, .15)
       &:last-child
         border: none
   td
@@ -1070,9 +1069,97 @@ h2
   min-width: 44px
 
 
+//validators
+.validators
+  .profile-top
+    margin: 0 0 62px
 
 
+.reward-box
+  display: flex
+  flex-direction: column
+  align-items: flex-start
+  margin: 0 0 70px
+  p
+    margin: 0 0 35px
+    font-size: 24px
+    font-weight: 500
+    font-family: 'Lato', sans-serif
+    strong
+      font-weight: 800
+  .btn
+    max-width: 376px
+    font-size: 24px
+    height: 76px
+    font-weight: 600
 
+.validators-table-title
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: space-between
+
+.form-search
+  position: relative
+  input
+    background: rgba(#37404B, .3)
+    border-radius: 3px
+    height: 50px
+    padding: 0 20px 0 89px
+    border: none
+    font-size: 20px
+    font-weight: 600
+    font-family: 'Lato', sans-serif
+    color: rgba(#fff, .5)
+    &::placeholder
+      color: rgba(#fff, .5)
+  label
+    max-width: 351px
+    margin: 0
+  button
+    background: transparent
+    position: absolute
+    top: 50%
+    transform: translate(0,-50%)
+    left: 23px
+    width: 27px
+    height: 27px
+    display: flex
+    align-items: center
+    justify-content: center
+    box-shadow: none
+    border: none
+      radius: 0
+
+.table-validators
+  thead
+    font-size: 20px
+    font-weight: 600
+  th
+    padding: 35px 25px 15px
+    &:last-child
+      padding: 35px 25px 15px
+  td
+    padding: 25px 25px 15px
+  tbody
+    font-size: 18px
+    font-weight: 600
+
+.item-activity
+  border-radius: 3px
+  padding: 7px 24px
+  display: flex
+  align-items: center
+  justify-content: center
+  text-align: center
+  width: fit-content
+  white-space: nowrap
+
+.bg-blue
+  background: #2932B5
+
+.bg-orange
+  background: #FF8700
 
 @import "media"
 // Всегда в конце
