--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1161,5 +1161,58 @@ h2
 .bg-orange
   background: #FF8700
 
+//.settings
+.form-settings
+  width: 100%
+  label
+    margin: 0 0 25px
+    display: flex
+    align-items: center
+    justify-content: flex-start
+    max-width: none
+  .input-title
+    width: 100%
+    max-width: 300px
+    padding: 0 5px 0 0
+    color: #FFFFFF
+    font-size: 24px
+    font-weight: 500
+    margin: 0
+  input
+    height: 77px
+    max-width: 478px
+    width: 100%
+  .form-group
+    margin: 50px 0 80px
+  .input-wrapper
+    display: flex
+    align-items: stretch
+    input
+      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06)
+      background: #fff
+      max-width: 60px
+      margin: 0 13px 0 0
+      padding: 0 3px
+      text-align: center
+      &:last-child
+        margin: 0
+  button.btn
+    max-width: 346px
+    height: 85px
+
+.btn-active
+  height: 77px
+  max-width: 280px
+  width: 100%
+  border-radius: 3px
+  color: #fff
+  font-size: 20px
+  font-weight: bold
+
+.clarification
+  margin: 0 0 30px
+  font-size: 18px
+  color: rgba(#fff, .5)
+
 @import "media"
 // Всегда в конце
