--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1442,6 +1442,69 @@ h2 {
 .bg-orange {
   background: #FF8700; }
 
+.form-settings {
+  width: 100%; }
+  .form-settings label {
+    margin: 0 0 25px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    max-width: none; }
+  .form-settings .input-title {
+    width: 100%;
+    max-width: 300px;
+    padding: 0 5px 0 0;
+    color: #FFFFFF;
+    font-size: 24px;
+    font-weight: 500;
+    margin: 0; }
+  .form-settings input {
+    height: 77px;
+    max-width: 478px;
+    width: 100%; }
+  .form-settings .form-group {
+    margin: 50px 0 80px; }
+  .form-settings .input-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch; }
+    .form-settings .input-wrapper input {
+      -webkit-box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+              box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+      background: #fff;
+      max-width: 60px;
+      margin: 0 13px 0 0;
+      padding: 0 3px;
+      text-align: center; }
+      .form-settings .input-wrapper input:last-child {
+        margin: 0; }
+  .form-settings button.btn {
+    max-width: 346px;
+    height: 85px; }
+
+.btn-active {
+  height: 77px;
+  max-width: 280px;
+  width: 100%;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold; }
+
+.clarification {
+  margin: 0 0 30px;
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.5); }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
@@ -1660,7 +1723,27 @@ h2 {
   .form-profile label {
     max-width: none; }
   .btn-add {
-    margin: 0 0 20px; } }
+    margin: 0 0 20px; }
+  .form-settings .input-title {
+    font-size: 16px;
+    max-width: none;
+    width: 100%;
+    margin: 0 0 15px; }
+  .form-settings label {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+  .form-settings .form-group {
+    margin: 30px 0 40px; }
+  .form-settings input {
+    font-size: 16px;
+    height: 60px;
+    max-width: none; }
+  .clarification {
+    font-size: 16px; }
+  .form-settings button.btn {
+    height: 60px; }
+  .btn-active {
+    height: 60px; } }
 
 @media only screen and (max-width: 575px) {
   .how-to-get__box {
