--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -283,6 +283,34 @@
   .btn-add
     margin: 0 0 20px
 
+  .form-settings .input-title
+    font-size: 16px
+    max-width: none
+    width: 100%
+    margin: 0 0 15px
+
+  .form-settings label
+    flex-wrap: wrap
+
+  .form-settings .form-group
+    margin: 30px 0 40px
+
+  .form-settings input
+    font-size: 16px
+    height: 60px
+    max-width: none
+
+  .clarification
+    font-size: 16px
+
+  .form-settings button.btn
+    height: 60px
+
+  .btn-active
+    height: 60px
+
+
+
 @media only screen and (max-width : 575px)
   .how-to-get__box
     width: 100%
